--- a/LayoutKit.xcodeproj/xcshareddata/xcschemes/LayoutKitObjC.xcscheme
+++ b/LayoutKit.xcodeproj/xcshareddata/xcschemes/LayoutKitObjC.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "0930"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "0B2D09AF1D8735E1007E487C"
-               BuildableName = "LayoutKitSampleApp.app"
-               BlueprintName = "LayoutKitSampleApp"
+               BlueprintIdentifier = "7EECD00E2053916C003DC4B1"
+               BuildableName = "LayoutKitObjC.framework"
+               BlueprintName = "LayoutKitObjC"
                ReferencedContainer = "container:LayoutKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,19 +26,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0B2D09AF1D8735E1007E487C"
-            BuildableName = "LayoutKitSampleApp.app"
-            BlueprintName = "LayoutKitSampleApp"
-            ReferencedContainer = "container:LayoutKit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -46,23 +36,21 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0B2D09AF1D8735E1007E487C"
-            BuildableName = "LayoutKitSampleApp.app"
-            BlueprintName = "LayoutKitSampleApp"
+            BlueprintIdentifier = "7EECD00E2053916C003DC4B1"
+            BuildableName = "LayoutKitObjC.framework"
+            BlueprintName = "LayoutKitObjC"
             ReferencedContainer = "container:LayoutKit.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -72,16 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0B2D09AF1D8735E1007E487C"
-            BuildableName = "LayoutKitSampleApp.app"
-            BlueprintName = "LayoutKitSampleApp"
+            BlueprintIdentifier = "7EECD00E2053916C003DC4B1"
+            BuildableName = "LayoutKitObjC.framework"
+            BlueprintName = "LayoutKitObjC"
             ReferencedContainer = "container:LayoutKit.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
